# ziyangirov_r_r

ziyangirov_r_r/: CMakeLists.txt
ziyangirov_r_r/prj.lab/: CMakeLists.txt
ziyangirov_r_r/prj.lab/QueueP/: CMakeLists.txt  QueueP.cpp  QueueP.h  QueueP_test.cpp
ziyangirov_r_r/prj.lab/btest/: CMakeLists.txt  btest_test.cpp
ziyangirov_r_r/prj.thirdparty/: doctest.h
